tests/baselines/reference/generatorTypeCheck20.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck20.ts(5,13): error TS2737: Property 'x' is missing in type 'Baz' but present in type 'Foo'.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck20.ts (1 errors) ====
    class Foo { x: number }
    class Baz { z: number }
    function* g(): IterableIterator<Foo> {
        yield;
        yield * [new Baz];
                ~~~~~~~~~
!!! error TS2737: Property 'x' is missing in type 'Baz' but present in type 'Foo'.
    }